feat: Cookbooks can be created and recipes can be started
