# backend/src/WhojooSite.Recipes/WhojooSite.Recipes.Module/Features/Recipes/List/ListRecipes.Endpoint.cs
@@ -1,4 +1,6 @@
 using Microsoft.AspNetCore.Builder;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Routing;
 
 using WhojooSite.Common.Handlers;
@@ -11,16 +13,20 @@ internal sealed class ListRecipesEndpoint : IRecipeModuleEndpoint
     public void MapEndpoint(IEndpointRouteBuilder endpointRouteBuilder)
     {
         endpointRouteBuilder
-            .MapGet(
-                "/recipes",
-                (
-                        int? pageSize,
-                        long? nextKey,
-                        IQueryHandler<ListRecipesQuery, ListRecipesResponse> queryHandler,
-                        CancellationToken cancellation) =>
-                    queryHandler
-                        .HandleAsync(new ListRecipesQuery(pageSize ?? 10, nextKey), cancellation)
-                        .MapToIResultAsync())
+            .MapGet("/recipes", ListRecipesAsync)
             .WithOpenApi();
+    }
+
+    private static async Task<Results<Ok<ListRecipesResponse>, ValidationProblem>> ListRecipesAsync(
+        int? pageSize,
+        long? nextKey,
+        IQueryHandler<ListRecipesQuery, ListRecipesResponse> queryHandler,
+        CancellationToken cancellation)
+    {
+        var result = await queryHandler.HandleAsync(new ListRecipesQuery(pageSize ?? 10, nextKey), cancellation);
+
+        return result.Match<Results<Ok<ListRecipesResponse>, ValidationProblem>>(
+            listRecipesResponse => TypedResults.Ok(listRecipesResponse),
+            errors => errors.MapToValidationProblem());
     }
 }
